started work on line graph

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,8 @@
 			{% include 'sidebar.html' %}
 			
 			<div class="column-md-4">
-
+					<h3 class=" page-header text-center">{{college}}</h3>
+					{% include 'simple_line_graph.html' %}
 			</div>
 		</div>
 
