--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -18,7 +18,7 @@
     <h3 class="">Colleges <span class="glyphicon glyphicon-education" aria-hidden="true"></span></h3>
     <ul class="list-group">
     {% for school in colleges %}
-        <a href="/timeseries/{{school}}">
+        <a href="/dashboard/{{school}}">
             <li class="list-group-item">{{school}}</li>
         </a>
     {% endfor %}
