--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,6 @@
 <!-- Navigational Sidebar -->
 <div class="col-md-1">
-        <h1 class=""> <a href="">Thrum</a> <span class="" aria-hidden="true"></span></h1>
+        <h1 class=""> <a href="/">Thrum</a> <span class="" aria-hidden="true"></span></h1>
         <ul class="list-group">
             <li onclick="toggleSchoolList()" class="list-group-item">
             <span class="glyphicon glyphicon-subscript" aria-hidden="true"></span>
