finished word cloud

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-		{% include 'head.html'%}
-		<body>
-		<div class="container-fluid">
-			{% include 'sidebar.html' %}
-			
-			<div class="column-md-4">
-				<div class="row">
-					<h2 class="text-center">{{college}}</h2>
-					<p class="text-center">{{posts}} posts {{comments}} comments {{redditors}} unique redditors today</p>
-					{% include'visits_today.html' %}
-				</div>
-			</div>
-		</div>
+{% extends 'home.html'%}
+{% block content %}
 
-		</body>
-</html>
+		{% include 'word_cloud.html' %}
+		{% include 'tfidf_word_cloud.html' %}
+	
+{% endblock %}
