--- a/templates/home.html
+++ b/templates/home.html
@@ -2,13 +2,9 @@
 <html lang="en">
 		{% include 'head.html'%}
 		<body>
-		<div class="container-fluid">
-			{% include 'sidebar.html' %}
-			
-			<div class="column-md-4">
-
+			{% include 'navbar.html' %}
+			<div class="container">
+				{% block content %} {% endblock %}
 			</div>
-		</div>
-
 		</body>
 </html>
