attempted full text search

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,5 +3,5 @@
 
 		{% include 'word_cloud.html' %}
 		{% include 'tfidf_word_cloud.html' %}
-	
+		{% include 'visits_today.html' %}
 {% endblock %}
