--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,9 @@
 <html lang="en">
 		{% include 'head.html'%}
 		<body>
-			{% include 'navbar.html' %}
+			{% block navbar %}
+				{% include 'navbar.html' %}
+			{% endblock %}
 			<div class="container">
 				{% block content %} {% endblock %}
 			</div>
