--- a/templates/activity_graph.html
+++ b/templates/activity_graph.html
@@ -3,9 +3,9 @@
 </div>
 
 <script type="text/javascript">
-	var margin = {top: 10, right: 10, bottom: 10, left: 10};
-	var width = 600 ;
-	var height = 250;
+	var margin = {top: 10, right: 10, bottom: 10, left: 30};
+	var width = 600 - margin.left - margin.right;
+	var height = 250 - margin.top - margin.bottom;
 	var data = {{ activity | safe}};
 	console.log(data)
 	var domainX = d3.extent(data, function(d) { return new Date(d.date)});
@@ -13,11 +13,11 @@
 
 	var x = d3.time.scale()
 				.domain(domainX)
-				.range([0, width]);
+				.range([margin.left, width]);
 
 	var y = d3.scale.linear()
 				.domain(domainY)
-				.range([height, 0 - margin.top]);
+				.range([height, 0]);
 
 	var xAxis = d3.svg.axis()
 				.scale(x)
@@ -33,8 +33,11 @@
 
 	var svg = d3.select('#activity')
                   .append('svg')
-                  .attr('width', width)
-                  .attr('height', height);
+                  .attr('width', width + margin.left + margin.right)
+                  .attr('height', height + margin.top + margin.bottom)
+                  .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+
 
 	var path = svg.append('path')
                       .datum(data)
@@ -43,21 +46,23 @@
                       .style('fill', 'none')
                       .style('stroke', '#FB5050')
                       .style('stroke-width', '3px');  
-
-	svg.append('g')
-     	.attr({
-     		class: 'x axis',
-     		transform: 'translate(0,' + (height - margin.bottom) + ')',
-     	})
-     	.call(xAxis);
-
- 	svg.append("g")
+     svg.append("g")
       .attr("class", "y axis")
+      .attr('transform', 'translate(' + margin.left + ',0)')
       .call(yAxis)
     .append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Posts");
+      .text("Activity")
+
+	svg.append('g')
+     	.attr({
+     		class: 'x axis',
+     		transform: 'translate(0,' + height  + ')',
+     	})
+     	.call(xAxis)
+     	.ticks(12);
+
 </script>
