--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,18 +7,22 @@
 	<div class="container">
 		<div class="col-md-8">
 			<div class="row">
-				<div class="btn-group btn-group-sm col-md-offset-4" role="group" aria-label="...">
+				<!-- <div class="btn-group btn-group-sm col-md-offset-4" role="group" aria-label="...">
 					<button type="button" class="btn btn-default">Past 24 Hours</button>
 					<button type="button" class="btn btn-default">Past Week</button>
-				</div>
+				</div> -->
+				{% include 'activity_graph.html' %}
 			</div>
-			{% include 'activity_graph.html' %}
+			<div class="row">
+				{% include 'force_layout.html' %}
+			</div>
 		</div>
 		<div class="col-md-4">
 			<div class="btn-group btn-group-sm col-md-offset-4" role="group" aria-label="...">
 				<button type="button" class="btn btn-default">Posts</button>
 				<button type="button" class="btn btn-default">Comments</button>
 			</div>
+			{% include 'word_cloud.html' %}
 		</div>
 	</div>
 {% endblock %}
