--- a/templates/head.html
+++ b/templates/head.html
@@ -1,8 +1,10 @@
 <head>
 		<title>Thrum: Campus Social Media Viz</title>
 		<link rel="stylesheet" type="text/css" href="http://bootswatch.com/superhero/bootstrap.min.css"><link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/graphs.css')}}">
 		<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
+		<script type="text/javascript" src="{{url_for('static', filename='d3.layout.cloud.js')}}"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script type="text/javascript"  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </head>
