--- a/templates/head.html
+++ b/templates/head.html
@@ -4,5 +4,5 @@
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
-		<script type="text/javascript" src="{{url_for('static', filename='lib/d3.layout.cloud.js')}}"></script>
+		<script type="text/javascript" src="{{url_for('static', filename='src/main.js')}}"></script>
 </head>
