--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,59 @@
+{% macro school_dropdown(colleges, tech=True) %}
+<div class="dropdown inline-block">
+		<ul class="nav navbar-nav">
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Schools <span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+								{% for college in colleges %}
+									{% if tech %}
+										<li><a href="#" onclick="setTech('{{college}}')">{{college}}</a></li>
+									{% else %}
+										<li><a href="#" onclick="setUga('{{college}}')">{{college}}</a></li>
+									{% endif %}
+								{% endfor %}
+									
+								</ul>
+							</li>
+						</ul>
+</div>
+{% endmacro %}
 <!DOCTYPE html>
 <html lang="en">
-	{% block head %}
-		{% include 'head.html'%}
-	{% endblock %}
-		<body>
+{% block head %}
+	{% include 'head.html'%}
+{% endblock %}
+<body>
+	<div class="">
+		{% block content %}
+			<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="#">Thrum</a>
+					</div>
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+						<form class="navbar-form navbar-left" role="search">
+							<div class="form-group">
+								<input type="text" id="text" class="form-control" placeholder="Search">
+							</div>
+							<button type="submit" class="btn btn-default" onclick="graph()">Submit</button>
+						</form>
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="#">About</a></li>
+						</ul>
+						{{school_dropdown(colleges)}}
+						{{school_dropdown(colleges, tech=False)}}
+					</div>
+				</div>
+			</nav>
 			<div class="container">
-				{% block content %} {% endblock %}
+				{% include 'line_graph.html' %}
 			</div>
+		{% endblock %}
+	</div>
 </html>
