--- a/templates/home.html
+++ b/templates/home.html
@@ -4,14 +4,9 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Schools <span class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
-								{% for college in colleges %}
-									{% if tech %}
-										<li><a href="#" onclick="setTech('{{college}}')">{{college}}</a></li>
-									{% else %}
-										<li><a href="#" onclick="setUga('{{college}}')">{{college}}</a></li>
-									{% endif %}
-								{% endfor %}
-									
+									{% for college in colleges %}
+										<li><input type="checkbox" name="colleges" value="{{college}}"> {{college}}</li>
+									{% endfor %}
 								</ul>
 							</li>
 						</ul>
@@ -23,8 +18,8 @@
 	{% include 'head.html'%}
 {% endblock %}
 <body>
+{% block content %}
 	<div class="">
-		{% block content %}
 			<nav class="navbar navbar-inverse">
 				<div class="container-fluid">
 					<div class="navbar-header">
@@ -34,26 +29,22 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#">Thrum</a>
+						<a class="navbar-brand" href="/">Thrum</a>
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-						<form class="navbar-form navbar-left" role="search">
+						<form action="/data" class="navbar-form navbar-left" role="search">
 							<div class="form-group">
-								<input type="text" id="text" class="form-control" placeholder="Search">
+								<input type="text" id="text" name="term" class="form-control" placeholder="Search">
 							</div>
-							<button type="submit" class="btn btn-default" onclick="graph()">Submit</button>
+							<button type="submit" class="btn btn-default">Submit</button>
+						{{school_dropdown(colleges)}}
 						</form>
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#">About</a></li>
 						</ul>
-						{{school_dropdown(colleges)}}
-						{{school_dropdown(colleges, tech=False)}}
 					</div>
 				</div>
 			</nav>
-			<div class="container">
-				{% include 'line_graph.html' %}
-			</div>
-		{% endblock %}
 	</div>
+{% endblock %}
 </html>
