--- a/templates/home.html
+++ b/templates/home.html
@@ -1,48 +1,26 @@
-{% macro school_dropdown(colleges, tech=True) %}
-		<ul class="nav navbar-nav">
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Schools <span class="caret"></span></a>
-								<ul class="dropdown-menu" role="menu">
-									{% for college in colleges %}
-										<li><input type="checkbox" name="colleges" value="{{college}}"> {{college}}</li>
-									{% endfor %}
-								</ul>
-							</li>
-						</ul>
-{% endmacro %}
 <!DOCTYPE html>
-<html lang="en">
-{% block head %}
-	{% include 'head.html'%}
-{% endblock %}
+<html ng-app="thrum">
+<head>
+	<title>Thrum</title>
+	{% include 'head.html' %}
+</head>
 <body>
-{% block content %}
-	<div class="">
-			<nav class="navbar navbar-inverse">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand" href="/">Thrum</a>
-					</div>
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-						<form action="/data" class="navbar-form navbar-left" role="search">
-							<div class="form-group">
-								<input type="text" id="text" name="term" class="form-control" placeholder="Search">
-							</div>
-							<button type="submit" class="btn btn-default">Submit</button>
-						{{school_dropdown(colleges)}}
-						</form>
-						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#">About</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
+	<div ng-controller="MainController">
+		{% include 'navbar.html' %}
+		<div class="col-md-8 col-md-offset-2">
+			<div class="row">
+				<!-- <ul class="list-group">
+					<li ng-repeat="word in trending track by $index" class="list-group-item">{{ word | angular}}</li>
+				</ul> -->
+				<h1 class="text-center">{{selected | angular}}</h1>
+				<h5 class="text-center"> trending</h5>
+				<a ng-repeat="word in trending track by $index"  ng-click="usage(word)"href="#" class="btn btn-primary btn-sm full-buffer">{{ word | angular}}</a>
+			</div>
+			<div class="row">
+				<bar-graph data="usageData">	
+				</bar-graph>
+			</div>
+		</div>
 	</div>
-{% endblock %}
+</body>
 </html>
