--- a/templates/head.html
+++ b/templates/head.html
@@ -5,5 +5,9 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.13/angular-ui-router.min.js"></script>
 		<script type="text/javascript" src="{{url_for('static', filename='src/app.js')}}"></script>
+	<!-- 	<script type="text/javascript" src="{{url_for('static', filename='src/controllers.js')}}"></script> -->
+		<script type="text/javascript" src="{{url_for('static', filename='src/directives.js')}}"></script>
+		<!-- <script type="text/javascript" src="{{url_for('static', filename='src/services.js')}}"></script> -->
 </head>
