completed word tree

--- a/static/views/main.html
+++ b/static/views/main.html
@@ -9,7 +9,7 @@
 			<li role="presentation" ui-sref-active="active" ><a ui-sref="main.search">Search</a></li>
 		</ul>
 	</div>
-	<div class="row">
+	<div class="row bottom-buffer">
 		<div ui-view>
 			
 		</div>
