--- a/templates/head.html
+++ b/templates/head.html
@@ -1,13 +1,17 @@
 <head>
-		<title>Thrum: Campus Social Media Viz</title>
-		<link rel="stylesheet" type="text/css" href="http://bootswatch.com/cosmo/bootstrap.min.css"><link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.13/angular-ui-router.min.js"></script>
-		<script type="text/javascript" src="{{url_for('static', filename='src/app.js')}}"></script>
-	<!-- 	<script type="text/javascript" src="{{url_for('static', filename='src/controllers.js')}}"></script> -->
-		<script type="text/javascript" src="{{url_for('static', filename='src/directives.js')}}"></script>
-		<!-- <script type="text/javascript" src="{{url_for('static', filename='src/services.js')}}"></script> -->
+	<title>Thrum: Campus Social Media Viz</title>
+	<link rel="stylesheet" type="text/css" href="http://bootswatch.com/cosmo/bootstrap.min.css"><link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.13/angular-ui-router.min.js"></script>
+	<script type="text/javascript" src="{{url_for('static', filename='src/app.js')}}"></script>
+	<script type="text/javascript" src="{{url_for('static', filename='src/controllers.js')}}"></script>
+	<script type="text/javascript" src="{{url_for('static', filename='src/directives.js')}}"></script>
+	<script type="text/javascript" src="{{url_for('static', filename='src/services.js')}}"></script>
+	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+	<script type="text/javascript">
+	google.load("visualization", "1.1", {packages:["wordtree"]});
+	</script>
 </head>
