--- a/static/css/graphs.css
+++ b/static/css/graphs.css
@@ -1,7 +1,7 @@
 body {
   font: 10px sans-serif;
 }
-
+    
 .axis path,
 .axis line {
 	font-family: Lato;
@@ -11,47 +11,11 @@ body {
   shape-rendering: crispEdges;
 }
 
-.x.axis path {
-  display: none;
-}
-
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 1.5px;
+.axis text {
+    text-shadow: 0 1px 0 #fff;
+    cursor: move;
 }
 
 
-.legend {
-    font-size: 16px;
-    font-weight: bold;
-    text-anchor: middle;
-} 
-
-#tooltip {
-  position: absolute;
-  width: 400px;
-  height: auto;
-  padding: 10px;
-  background-color: white;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-  pointer-events: none;
-  z-index: 1000;
-}
-#tooltip.hidden {
-  display: none;
-}
-#tooltip p:first-child {
-  margin: 0;
-  font-family: sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color:#317eac;
-}
 
 
